app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: devexterminal
  name: devexterminal
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: devexterminal
    weight: 100
